<resources>
    <string name="app_name">StintCalcApp2</string>
    <string name="main">StintCalcApp</string>
    <string name="Set">Set</string>
    <string name="no_data">"No Data"</string>
    <string name="pick_time">Pick Time</string>
    <string name="startTime">StartTimeSet</string>
    <string name="endTime">EndTimeSet</string>
    <string name="def_time">00:00</string>
    <string name="startTimeTxt">開始時間</string>
    <string name="endTimeTxt">終了時間</string>
    <string name="runTimeText">走行時間</string>
    <string name="stintText">Stint</string>
    <string name="driverNameText">Driver</string>
    <string name="KartNoText">Kart No.</string>
    <string name="def_driver">-</string>
    <string name="driverBtn">DriverSet</string>
    <string name="startRaceBtn">StartTime</string>
    <string name="KartNoBtn">KartNoSet</string>
    <string name="perStintTxt">1Stint当たり＝</string>
    <string name="minute">min</string>
    <string name="calcBtn">Calc</string>
    <string name="raceTimeText">レース時間= </string>
    <string name="refresh">refresh</string>
    <string name="uniformity">均等割り</string>
    <string name="check_item_text">選択項目にセット</string>
    <string name="all_check_text">全Stintにチェックを入れる</string>
    <string name="all_uncheck_text">全Stintからチェックを外す</string>
    <string name="check_revers_text">現在のチェックを逆にする</string>
    <string name="save_text">Save</string>
    <string name="read_text">Read</string>
    <string name="no_text">"No text !"</string>
    <string name="saved">Saved</string>
    <string name="read_error">Read file error !</string>
    <string name="read_comp">Read Completed !</string>
    <string name="tab_strategy">Strategy</string>
    <string name="tab_now_run_time">Now</string>
    <string name="tab_stint">Stint</string>
    <string name="tab_set">Set</string>
    <string name="tab_data">RaceData</string>
    <string name="tab_title">表示する項目を選択</string>
    <string name="stintsText">Stint数=</string>
    <string name="minText">min</string>

    <!--  SETタブ  -->
    <string name="stintSetText">チェックが入っている項目の\n設定画面を開く</string>
    <string name="perStintSetText">レース時間・Stint数から\n全体を均等割りした値\nを設定する</string>
    <string name="checkPerStintSetText">チェックが入っている項目\nから先を均等割りする</string>
    <string name="setMinText">チェックが入っている項目\nに↓の走行時間を設定する</string>
    <string name="setMinText_driveTime_text">走行時間＝</string>
    <string name="setMinText_recalc">設定したStint以降について\n均等割りをする</string>
    <string name="setMinText_recalc_yes">Yes</string>
    <string name="setMinText_recalc_no">No</string>
    <string name="endTimeSetBtnText">現在時刻を走行終了時間に\nセットする</string>

    <!--  RaceDataタブ  -->
    <string name="setString">設定</string>
    <string name="confirmBtn">↑の値で設定する</string>
    <string name="coefString">最大走行時間の％設定</string>
    <string name="upperRunTimeText">1Stint辺りの最大走行時間</string>
    <string name="minimumRunTimeText">1Stint辺りの最小走行時間</string>

    <!--  Nowタブ  -->
    <string name="nowTabExplanationString">チェックがついているStintまでの\n走行時間Stint数を表示する</string>
    <string name="refreshText">表示を更新する</string>
    <string name="sumTimeString">合計</string>

    <!-- Strategyタブ -->
    <string name="upDateText">更新</string>
    <string name="equalShareDeviationDescriptionText">■均等割りに対する余裕</string>
    <string name="perStintInStrategyTabTxt">・均等割り時 1Stint当たり＝</string>
    <string name="untilCheckedItemText">・チェック項目までで</string>
    <string name="untilLockedItemText">・ロックされた項目までで</string>
    <string name="equalShareDeviationCheckedPointText">　- 均等割りに対する余裕：</string>
    <string name="equalShareDeviationLockPointText">　- 均等割りに対する余裕：</string>
    <string name="subsequentEqualizationText">　- 以降の1Stintの走行時間：</string>

    <string name="DiscardStintsText">■捨てStintの許容回数※</string>
    <string name="DiscardStintsAllText">・レース全体</string>
    <string name="DiscardStintsCheckedPointText">・チェックされている項目以降</string>
    <string name="DiscardStintsLockedPointText">・ロックされている項目以降</string>
    <string name="TheAllowableNumberOf5minuteDiscardStints">　- 捨てStint(5分)の許容回数 ：</string>
    <string name="TheAllowableNumberOf10minuteDiscardStints">　- 捨てStint(10分)の許容回数：</string>

    <string name="discardCheckedItemsTitleText">■チェック項目を捨てStintにする※</string>
    <string name="discardCheckedItemsText">分で捨てた際 それ以降の許容回数</string>
    <string name="discardStintsNote">※ 捨てStintを作った場合、\n　以降のStintの平均走行時間が\n　30分以上にならない回数を表示。\n　そのため、許容回数を上限まで使うと\n　以降は30分の走行時間が必須になる</string>

    <!-- InputForm画面-->
    <string name="selectStintStr">Stint</string>
    <string name="setNowTime">現在時刻を設定</string>
    <string name="driverNameStr">ドライバー名</string>
    <string name="kartNoStr">号車</string>
    <string name="startTimeSetStr">走行開始時間</string>
    <string name="endTimeSetStr">走行終了時間</string>
    <string name="lockStatus">ロック状況</string>

    <string name="driverNameNone">-</string>
    <string name="driverNameInterruption">中断</string>
    <string name="driverNameAkima">秋間</string>
    <string name="driverNameToyoguchi">豊口</string>
    <string name="driverNameYoshikai">吉戒</string>
    <string name="driverNameLuke">ルーク</string>
    <string name="driverNameYokota">横田</string>
    <string name="driverNameTuboi">坪井</string>
    <string name="driverNameNitta">新田</string>
    <string name="driverNameX">X</string>
    <string name="upperLimit">上限</string>

    <string-array name="kartNoList">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
    </string-array>

    <string-array name="lockStatusList">
        <item>ロック中</item>
        <item>アンロック中</item>
    </string-array>

    <string-array name="driverList">
        <item>-</item>
        <item>中断</item>
        <item>秋間</item>
        <item>豊口</item>
        <item>吉戒</item>
        <item>ルーク</item>
        <item>横田</item>
        <item>坪井</item>
        <item>新田</item>
        <item>X</item>
    </string-array>
</resources>